feat(core): allows multiple task for WaitFor (#3751)
* feat(core): add checkFrequency prop to waitFor task

* feat(core): allows multiple task for WaitFor

* fix(): use iteration and clear attempts to avoid cumulating data

* chore(doc): removed alias on WaitFor task and renamed task in tests